finish teraphy section and platform section

--- a/index.html
+++ b/index.html
@@ -327,63 +327,89 @@
             </div>
         </div>
 
-
-<!-- 
         <div class="Home__content-container">
             <div class="Home__content-container-età">
                 <div class="img-container-età">
-                    <img src="includes/images/etàBiologica.webp" alt="">
+                    <img src="includes/images/responsive.webp" alt="">
                 </div>  
                 <div class="Home-content-description">
-                    <h3>Che cos'è l'età Biologica?</h3>
+                    <h3>Com'è organizzata la Piattaforma?</h3>
                     <p>
-                        L'età biologica rappresenta lo stato di salute 
-                        e il livello di invecchiamento del corpo, 
-                        diverso dall'età anagrafica. Si determina 
-                        valutando la funzione degli organi, i biomarcatori,
-                        lo stile di vita e la condizione fisica, stimando 
-                        quanto il corpo sia "giovane" o "vecchio" rispetto
-                        all'età reale.</p>
+                        Il BioVitalAge Clock e il BioVitalAge 
+                        Therapy risiedono all’interno di una 
+                        piattaforma, la quale sfrutta i Big Data,
+                        arricchendosi continuamente con nuovi 
+                        dati degli utenti. Questo approccio può
+                        rivelare pattern nascosti utili per 
+                        prevenzione e trattamento. 
+                    </p>
                 </div>           
             </div>
 
             <div class="Home__content-container-vitale">   
-                <div class="Home-content-description">
-                    <h3>Che cos'è la Capacità Vitale?</h3>
-                    <p>
-                        La capacità vitale o Vitality 
-                        è il risultato del funzionamento
-                        di diversi sistemi del corpo, e 
-                        si manifesta attraverso il livello 
-                        di energia, il metabolismo, la forza 
-                        muscolare e il modo in cui il corpo 
-                        reagisce allo stress e alle malattie.
-                    </p>
+                <div class="Home-content-description archi">
+                    <h3>Archiviazione Dati e Big Data Analysis</h3>
+                    <ul class="archiviazione">
+                        <li><span>Archiviazione sicura e centralizzata</span>dei dati nel database cloud Firebase Firestore</li>
+                        <li><span> Integrazione con sistemi di cartelle cliniche elettroniche </span>(EHR)</li>
+                        <li><span> Potenziale per sincronizzare i dati su diversi dispositivi</span>e facilitare l’accesso remoto</li>
+                    </ul>
                 </div>
                 <div class="img-container-vitality">
-                    <img src="includes/images/capacitàVitale.webp" alt="">
+                    <img src="includes/images/archiviazione.webp" alt="">
                 </div>     
             </div>
 
             <div class="Home__content-container-resilenza">
                 <div class="img-container-resilenza">
-                    <img src="includes/images/resilienza.webp" alt="">
+                    <img src="includes/images/ai.webp" alt="">
                 </div>  
                 <div class="Home-content-description">
-                    <h3>Che cos'è la resilenza?</h3>
+                    <h3>Affinamento dei Risultati</h3>
                     <p>
-                        è la capacità del corpo di adattarsi
-                        e recuperare dopo stress, malattie 
-                        o traumi. Rappresenta la capacità di
-                        mantenere o ripristinare la salute
-                        nonostante le difficoltà, influenzata
-                        da fattori biologici, psicologici e 
-                        ambientali.
+                        Uno dei pilastri della piattaforma è l’integrazione
+                        di algoritmi di intelligenza artificiale (AI) che 
+                        non solo analizzano i dati, ma  apprendono  e  
+                        migliorano  costantemente attraverso  ogni  interazione.
+                        Ogni  volta  che nuovi  dati  vengono  inseriti  
+                        o  elaborati,  l'AI affina i suoi modelli, rendendo i risultati e 
+                        i consigli sempre più accurati e personalizzati.
                     </p>
-                </div>
-                
-            </div> -->
+                </div>      
+            </div> 
+        </div>
 
+        <h3 class="presentazione-tittle">PRESENTAZIONE PIATTAFORMA</h3>
+
+        <div class="Home__content-container">
+            <div class="Home__content-container-età">
+                <div class="img-container-età">
+                    <img src="includes/images/piattaforma1.png" alt="">
+                </div>  
+                <div class="Home-content-description archi">
+                    <h3>Archiviazione Dati e Big Data Analysis</h3>
+                    <ul class="archiviazione">
+                        <li><span>Interfaccia utente intuitiva</span>sviluppata con tkinter per una navigazione semplice anche per utenti meno esperti.</li>
+                        <li><span>Funzione  di  ricerca  integrata </span>che  permette  di localizzare rapidamente esami specifici all'interno di una lista estesa, migliorando l’efficienza del lavoro.</li>
+                        <li><span>Analisi e Visualizzazione dei Dati</span>Introduzione di report grafici avanzati e strumenti di monitoraggio longitudinale per tenere traccia dei progressi del paziente nel tempo</li>
+                    </ul>
+                </div>      
+            </div>
+
+            <div class="Home__content-container-vitale">   
+                <div class="Home-content-description archi">
+                    <h3>Archiviazione Dati e Big Data Analysis</h3>
+                    <ul class="archiviazione">
+                        <li>Generazione automatica di report PDF personalizzati utilizzando modelli predefiniti in formato JPG.</li>
+                        <li>Inserimento dinamico dei dati del paziente nei template, rendendo facile la condivisione e la conservazione dei report.</li>
+                        <li>Report strutturati per fornire una panoramica chiara e immediata delle condizioni di salute del paziente.</li>
+                    </ul>
+                </div>  
+                <div class="img-container-vitality">
+                    <img src="includes/images/piattaforma2.png" alt="">
+                </div>     
+            </div>
+        </div>
     </section>
 
 
@@ -391,12 +417,12 @@
 
 
 
-
-    <section class="ChiSiamo" id="ChiSiamo">
-        Coming Soon - Chi siamo
-    </section>
     <section class="ChiSiamo" id="Contatti">
         Coming Soon - Contatti
     </section>
+
+    <footer>
+        test
+    </footer>
 </body>
 </html>
