update last modify

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 
     <section class="Bio_Vital_Age_Clock" id="BioVitalAgeClock_Section">
 
-        <div class="Bio_Clock-container">
 
             <div class="bio-clock-content-container">
 
@@ -80,7 +79,7 @@
                 </div>
             </div>
             
-            <div class="card-container">
+            <div class="card-container bio-clock">
                 <div class="Card">
                         <div class="Card-img">
                             <img src="includes/images/etàBiologica.webp" alt="">
@@ -134,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="bio-clock-content-container">
+            <div class="bio-clock-content-container bio-clock-two">
                 <div class="bio-clock-image-container">
                     <div class="container-hidden">
                         <img src="includes/images/biovitalageutilize.webp" alt="">
@@ -161,15 +160,14 @@
                     <button class="button-style bio-btn">Scopri Vitalage Teraphy</button>
                 </div>
             </div>
-        </div>
-
-
    
+            <div class="bio-grid-container-section">
+                <div class="bio-grid-header">
+                    <h3>Integrazioni Avanzate</h3>
+                    <h5>Calcolo dell'età biologica specifica per organi e/o apparati, oltre quella generale:</h5>
+                </div>
 
-        
-
-
-
+            </div>
 
     </section>
 
