aggiunto latest news

--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
                         <img src="https://uiparadox.co.uk/templates/nova-care/assets/media/blog/blog-1.png" alt="">
                     </div>
                     <div class="card-descrizione p-5">
-                        <div class="autore-description d-flex justify-content-center align-items-center">
-                            <div class="Container-autore d-flex ">
+                        <div class="autore-description d-flex justify-content-between align-items-center">
+                            <div class="Container-autore d-flex" style="gap:5px">
                                 <img src="includes/images/icone/autore.png" alt="" width="25px" height="25px">
                                 <p>By Nome Autore</p>
                             </div>
-                            <div class="Container-Data d-flex ">
+                            <div class="Container-Data d-flex" style="gap:5px">
                                 <img src="includes/images/icone/data.png" alt="" width="25px" height="25px">
                                 <p>22, Ottobre 2024</p>
                             </div>
@@ -233,7 +233,7 @@
 
                         <h3>Titolo Blog</h3>
                         <p>Piccola Descrizione del blog che va a dare un accenno a quel che sarà il contenuto</p>
-                        <button class="button-style">Read more</button>
+                        <button class="button-style">Leggi di più</button>
                     </div>
                 </div>
                 <div class="card-item col-md-4">
@@ -241,19 +241,20 @@
                         <img src="https://uiparadox.co.uk/templates/nova-care/assets/media/blog/blog-1.png" alt="">
                     </div>
                     <div class="card-descrizione p-5">
-                        <div class="autore-description d-flex justify-content-center align-items-center">
-                            <div class="Container-autore d-flex justify-content-centerc align-items-center">
-                                <img src="" alt="">
-                                By Nome Autore
+                        <div class="autore-description d-flex justify-content-between align-items-center">
+                            <div class="Container-autore d-flex" style="gap:5px">
+                                <img src="includes/images/icone/autore.png" alt="" width="25px" height="25px">
+                                <p>By Nome Autore</p>
                             </div>
-                            <div class="Container-Data d-flex justify-content-centerc align-items-center">
-                                <img src="" alt="">
-                                22, Ottobre 2024
+                            <div class="Container-Data d-flex" style="gap:5px">
+                                <img src="includes/images/icone/data.png" alt="" width="25px" height="25px">
+                                <p>22, Ottobre 2024</p>
                             </div>
                         </div> 
+
                         <h3>Titolo Blog</h3>
                         <p>Piccola Descrizione del blog che va a dare un accenno a quel che sarà il contenuto</p>
-                        <button class="button-style">Read more</button>
+                        <button class="button-style">Leggi di più</button>
                     </div>
                 </div>
                 <div class="card-item col-md-4">
@@ -261,25 +262,28 @@
                         <img src="https://uiparadox.co.uk/templates/nova-care/assets/media/blog/blog-1.png" alt="">
                     </div>
                     <div class="card-descrizione p-5">
-                        <div class="autore-description d-flex justify-content-center align-items-center">
-                            <div class="Container-autore d-flex justify-content-centerc align-items-center">
-                                <img src="" alt="">
-                                By Nome Autore
+                        <div class="autore-description d-flex justify-content-between align-items-center">
+                            <div class="Container-autore d-flex" style="gap:5px">
+                                <img src="includes/images/icone/autore.png" alt="" width="25px" height="25px">
+                                <p>By Nome Autore</p>
                             </div>
-                            <div class="Container-Data d-flex justify-content-centerc align-items-center">
-                                <img src="" alt="">
-                                22, Ottobre 2024
+                            <div class="Container-Data d-flex" style="gap:5px">
+                                <img src="includes/images/icone/data.png" alt="" width="25px" height="25px">
+                                <p>22, Ottobre 2024</p>
                             </div>
                         </div> 
+
                         <h3>Titolo Blog</h3>
                         <p>Piccola Descrizione del blog che va a dare un accenno a quel che sarà il contenuto</p>
-                        <button class="button-style">Read more</button>
+                        <button class="button-style">Leggi di più</button>
                     </div>
                 </div>
                 
             </div>
 
-
+            <button class="button-style">
+                
+            </button>
 
         </div>
 
