aggiunta sezione BioVitalAge Teraphy

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="linkage-container">
                 <li><a href="index.html">Home Page</a> <img src="includes/images/navBarArrow.png" alt=""></li>
                 <li><a href="url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a><img src="includes/images/navBarArrow.png" alt=""></li>
-                <li><a href="">BioVitalAge Therapy</a><img src="includes/images/navBarArrow.png" alt=""></li>
+                <li><a href="url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a><img src="includes/images/navBarArrow.png" alt=""></li>
                 <li><a href="">Innovation</a><img src="includes/images/navBarArrow.png" alt=""></li>
                 <li><a href="">Industries</a><img src="includes/images/navBarArrow.png" alt=""></li>
                 <li><a href="">Corporation</a><img src="includes/images/navBarArrow.png" alt=""></li>
