Aggiunta sezione Innovation, Contattaci, Inizio Sezione Industries e Corporation

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 <li><a href="index.html">Home Page</a> <img src="includes/images/navBarArrow.png" alt=""></li>
                 <li><a href="url/BioVitalAgeClock/BioVitalAgeClock.html">BioVitalAge Clock</a><img src="includes/images/navBarArrow.png" alt=""></li>
                 <li><a href="url/BioVitalAgeTherapy/BioVitalAgeTeraphy.html">BioVitalAge Therapy</a><img src="includes/images/navBarArrow.png" alt=""></li>
-                <li><a href="">Innovation</a><img src="includes/images/navBarArrow.png" alt=""></li>
-                <li><a href="">Industries</a><img src="includes/images/navBarArrow.png" alt=""></li>
-                <li><a href="">Corporation</a><img src="includes/images/navBarArrow.png" alt=""></li>
+                <li><a href="url/Innovation/innovation.html">Innovation</a><img src="includes/images/navBarArrow.png" alt=""></li>
+                <li><a href="url/Industries/industries.html">Industries</a><img src="includes/images/navBarArrow.png" alt=""></li>
+                <li><a href="url/Corporation/corporation.html">Corporation</a><img src="includes/images/navBarArrow.png" alt=""></li>
             </ul>
         </div>
         
         <div class="nav-bar__other-link">
-            <a href="#" class="info-link">Contattaci<img src="includes/images/navBarArrow.png" alt=""></a>
+            <a href="url/contattaci/contattaci.html" class="info-link">Contattaci<img src="includes/images/navBarArrow.png" alt=""></a>
             <button href="#" class="button-style accedi">Accedi</button>
         </div>
     </nav>
