aggiunt asezione Industries, Corporation

--- a/url/Corporation/corporation.html
+++ b/url/Corporation/corporation.html
@@ -46,9 +46,136 @@
     
             <div class="Home_Section-tittle">
                 <div class="backdrop"></div>
-                <h3>Corporation</h3>
+                <h3>Our Customers</h3>
             </div>
     
+
+            <div class="col-md-10 p-5 customers-container">
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+                <div class="card-customer">
+                    <div class="backdrop">
+                        <p>Nome azienda</p>
+                        <button class="arrow-button">Scopri di più</button>
+                    </div>
+                    <img src="https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr" alt="">
+                </div>
+
+            </div>
+
+            <div class="container-feedback">
+
+                <h3 class="tittle">Client Feedback</h3>
+
+                <div class="col-md-10 p-5 d-flex justify-content-center align-items-center feedbeck-container">
+                    <div class="col-md-3 p-5 card-feedback">
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error ipsum esse quaerat, adipisci similique numquam perferendis repellendus ab recusandae at impedit qui, dolore officia itaque quas consequatur, doloremque unde ratione?</p>
+                        <div class="img-container-grid">
+                            <div class="img-container-circle">
+                                <img src="../../includes/images/icone/autore.png" alt="" width="30px" height="30px">
+                            </div>
+                        </div>
+                        <h3>Nome</h3>
+                        <p>Location</p>
+                    </div>
+                    <div class="col-md-3 p-5 card-feedback">
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error ipsum esse quaerat, adipisci similique numquam perferendis repellendus ab recusandae at impedit qui, dolore officia itaque quas consequatur, doloremque unde ratione?</p>
+                        <div class="img-container-grid">
+                            <div class="img-container-circle">
+                                <img src="../../includes/images/icone/autore.png" alt="" width="30px" height="30px">
+                            </div>
+                        </div>
+                        <h3>Nome</h3>
+                        <p>Location</p>
+                    </div>
+                    <div class="col-md-3 p-5 card-feedback">
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error ipsum esse quaerat, adipisci similique numquam perferendis repellendus ab recusandae at impedit qui, dolore officia itaque quas consequatur, doloremque unde ratione?</p>
+                        <div class="img-container-grid">
+                            <div class="img-container-circle">
+                                <img src="../../includes/images/icone/autore.png" alt="" width="30px" height="30px">
+                            </div>
+                        </div>
+                        <h3>Nome</h3>
+                        <p>Location</p>
+                    </div>
+                    <div class="col-md-3 p-5 card-feedback">
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error ipsum esse quaerat, adipisci similique numquam perferendis repellendus ab recusandae at impedit qui, dolore officia itaque quas consequatur, doloremque unde ratione?</p>
+                        <div class="img-container-grid">
+                            <div class="img-container-circle">
+                                <img src="../../includes/images/icone/autore.png" alt="" width="30px" height="30px">
+                            </div>
+                        </div>
+                        <h3>Nome</h3>
+                        <p>Location</p>
+                    </div>
+                </div>
+            </div>  
+
+            <div class="col-md-12 p-5 d-flex justify-content-center align-items-center home-content-demo" style="margin-bottom: 0rem;">
+                <div class="backdrop">
+                    <img src="https://www.dimi.univr.it/documenti/Iniziativa/immagine/immagine268271.jpeg" alt="">
+                </div>
+                <div class="col-md-5 p-5 demo-descrizione">
+                    <h3>Collabora con noi</h3>
+                    <p class="col-md-10">
+                        Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. In et placeat praesentium
+                        inventore ratione. Eius quidem fuga nam
+                        expedita perspiciatis qui quos, consequuntur 
+                        eveniet laborum nemo, obcaecati, exercitationem tempore iusto?
+                    </p>
+                    <div class="p-0 d-flex justify-content-center align-items-center button-container-demo">
+                        <button class="button-style">Contattaci</button>
+                        <button class="button-style">Richiedi Informazioni</button>
+                    </div>
+                </div>            
+            </div>
+
+
 
             <footer>
                 <div class="footer-header-container">
