--- a/url/Innovation/innovation.html
+++ b/url/Innovation/innovation.html
@@ -193,7 +193,7 @@
         </div>
 
         
-        <div class="col-md-12 p-5 d-flex justify-content-center align-items-center home-content-demo" style="margin-bottom: 1.5rem;">
+        <!-- <div class="col-md-12 p-5 d-flex justify-content-center align-items-center home-content-demo" style="margin-bottom: 1.5rem;">
             <div class="col-md-5 p-5 demo-descrizione">
                 <h3>Contattaci</h3>
                 <p class="col-md-8">
@@ -207,7 +207,7 @@
                     <button class="button-style">I nostri contatti</button>
                 </div>
             </div>            
-        </div>
+        </div> -->
 
 
         <footer>
