--- a/url/Corporation/corporation.html
+++ b/url/Corporation/corporation.html
@@ -50,7 +50,10 @@
             </div>
     
 
+            <h3 class="tittle">BioVitalAge Customers and Collaborators</h3>
+            <p class="col-md-4 subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quidem fugit iste, reiciendis labore illo dolores esse dolor, sunt laudantium nemo perspiciatis veritatis eligendi cumque, laborum obcaecati hic tempore libero.</p>
             <div class="col-md-10 p-5 customers-container">
+            
                 <div class="card-customer">
                     <div class="backdrop">
                         <p>Nome azienda</p>
